8296323: JVMTI can_support_virtual_threads not available for agents loaded into running VM

Reviewed-by: alanb, rrich